src/main.css
@import './css/variables.css';
@import './css/transitions.css';
@import './css/general.css';
@import './css/inputs.css';
@import './css/buttons.css';
@import './css/skeletons.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply relative overflow-x-hidden font-sans leading-none antialiased;
}

html,
body {
    @apply m-0 min-h-[600px] w-extension-screen p-0 text-base;
}

b,
strong {
    @apply font-bold;
}

header {
    @apply block w-full;
}

* {
    @apply outline-theme-primary-600;
}

*:focus-visible:not(input, textarea) {
    @apply outline outline-2 outline-theme-primary-600;
    transition: outline-width 0s !important;
}

#extension-root {
    @apply relative z-0 h-full;
}

#portal {
    @apply relative;
}

.input-correct {
    border: 1px solid green !important;
}

.input-incorrect {
    border: 1px solid red !important;
}

@keyframes fadeOut {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.splash-screen-icon {
    animation: fadeOut 0.4s ease-in-out 1s forwards;
}

.dropdown-body {
    @apply invisible -translate-y-2.5 opacity-0 transition-transform duration-200 ease-in-out;
}

.dropdown-transition {
    @apply visible translate-y-0 opacity-100;
}

#scrollable-container {
    @apply h-screen w-extension-screen max-w-extension-screen overflow-y-auto overflow-x-hidden;
}

.main-container {
    @apply w-extension-screen;
}

.dialog-wrapper {
    @apply max-w-extension-screen;
}

.tippy-box[data-theme*='ark'] {
    @apply rounded-lg;
}

.tippy-box[data-theme*='ark'] .tippy-content {
    @apply px-2 py-3;
}

.tippy-box[data-theme~='ark-light'] {
    @apply bg-subtle-black text-white;
}

.tippy-box[data-theme~='ark-dark'] {
    @apply bg-white text-subtle-black;
}

.tippy-box[data-theme~='ark-light'] .tippy-svg-arrow {
    @apply fill-subtle-black;
}

.tippy-box[data-theme~='ark-dark'] .tippy-svg-arrow {
    @apply fill-white;
}

.globeIcon.dark circle {
    stroke: #3b3b3b;
}

.dialog-bg .globeIcon.dark circle {
    stroke: #2e2e2e;
}

@-moz-document url-prefix() {
    .custom-scroll {
        scrollbar-width: thin;
        scrollbar-color: #058751 transparent;
    }

    .custom-scroll::-webkit-scrollbar-thumb {
        @apply bg-theme-primary-700;
    }

    .custom-scroll::-webkit-scrollbar-track {
        @apply bg-transparent;
    }
}

.custom-scroll::-webkit-scrollbar {
    @apply w-1;
}

.custom-scroll::-webkit-scrollbar-thumb {
    @apply rounded-[50px] bg-theme-primary-700;
}

.logo path#ark {
    @apply !fill-theme-primary-950 dark:fill-white;
}

.dark .logo path#ark {
    @apply !fill-white;
}

.logo path#connect,
.logo #ark-logo {
    @apply !fill-theme-primary-700 dark:fill-theme-primary-650;
}

.dark .logo path#connect,
.dark .logo #ark-logo {
    @apply !fill-theme-primary-650;
}

.unlock-button #corner-down-left {
    @apply stroke-theme-primary-500;
}

.unlock-button.disabled #corner-down-left {
    @apply stroke-theme-secondary-400;
}

.animation-fade-in {
    animation: fadeIn 1s ease-in-out;
}

